# traj_tracking_py

./: README.md  package.xml  setup.cfg  setup.py
bags/joint_joy/: metadata.yaml
bags/perfect_circle/: metadata.yaml  perfect_circle_0.db3
bags/real_circle/: metadata.yaml  real_circle_0.db3
bags/vline/: metadata.yaml  vline_0.db3
commands/: sequenza_exp.txt  service_call.txt
controllers/: mobile_wx250s.yaml  mobile_wx250s_controllers.yaml  modes_quick.yaml
launch/: tracking.launch.py
plotjuggler/: ee_traj_plot.xml  error_disp_pid_tuning.xml
traj_tracking_py/: ee_pose_publisher.py  traj_tracker_client.py  traj_tracker_publisher.py
trajectories/: ee_circle_traj.csv  elbow_10ms_traj.csv  elbow_sine_traj.csv  q_qd_10ms_circle.csv  q_qd_traj_circle.csv  q_traj_10ms_circle_large.csv  q_traj_10ms_hline.csv  q_traj_10ms_obl_line_down.csv  q_traj_10ms_obl_line_up.csv  q_traj_1ms_obl_line_up.csv  q_traj_circle.csv  q_traj_vline.csv  shoulder_sine_traj.csv  wrist_angle_sine_traj.csv  wrist_angle_smooth_traj.csv  wrist_angle_vel_sine_traj.csv
